--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,13 +2,22 @@
   "branches": ["master"],
   "tagFormat": "api-v${version}",
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    ["@semantic-release/commit-analyzer", {
+      "preset": "conventionalcommits",
+      "releaseRules": [
+        { "breaking": true, "release": "minor" },
+        { "type": "feat", "release": "minor" },
+        { "type": "fix", "release": "patch" },
+        { "type": "perf", "release": "patch" },
+        { "type": "refactor", "release": "patch" }
+      ]
+    }],
     "@semantic-release/release-notes-generator",
     ["@semantic-release/changelog", { "changelogFile": "CHANGELOG.md" }],
     ["@semantic-release/exec", { "prepareCmd": "echo ${nextRelease.version} > VERSION" }],
     ["@semantic-release/git", {
       "assets": ["CHANGELOG.md", "VERSION"],
-      "message": "chore(release): api ${nextRelease.version} \n\n${nextRelease.notes}"
+      "message": "chore(release): api ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
     "@semantic-release/github"
   ]
