--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,7 +9,11 @@
         { "type": "feat", "release": "minor" },
         { "type": "fix", "release": "patch" },
         { "type": "perf", "release": "patch" },
-        { "type": "refactor", "release": "patch" }
+        { "type": "refactor", "release": "patch" },
+        { "type": "chore", "release": false },
+        { "type": "docs", "release": false },
+        { "type": "test", "release": false },
+        { "type": "ci", "release": false }
       ]
     }],
     "@semantic-release/release-notes-generator",
